# dotfiles

./: README.md
.icons/Vimix-Black/: index.theme
.icons/Vimix-Black-dark/: index.theme
.icons/weebware/: index.theme
.icons/weebware/Adwaita/16x16/: Makefile.am
.icons/weebware/Adwaita/22x22/: Makefile.am
.icons/weebware/Adwaita/24x24/: Makefile.am
.icons/weebware/Adwaita/256x256/: Makefile.am
.icons/weebware/Adwaita/32x32/: Makefile.am
.icons/weebware/Adwaita/48x48/: Makefile.am
.icons/weebware/Adwaita/512x512/: Makefile.am
.icons/weebware/Adwaita/64x64/: Makefile.am
.icons/weebware/Adwaita/8x8/: Makefile.am
.icons/weebware/Adwaita/96x96/: Makefile.am
.icons/weebware/Adwaita/cursors/: Makefile.am
.icons/weebware/Adwaita/scalable/: Makefile.am
.icons/weebware/Adwaita/scalable-up-to-32/: Makefile.am
.icons/weebware/output/: Makefile.am
.icons/weebware/output/weebware/: Makefile.am
.icons/weebware/src/cursors/: Makefile.am
.icons/weebware/src/fullcolor/: Makefile.am
.icons/weebware/src/spinner/: Makefile.am
.icons/weebware/src/symbolic/: Makefile.am
gnome extensions/fullscreenworkspace@satran.in/: metadata.json
steam/dark/: settings.styles
